--- a/app/src/main/res/layout/activity_login_netflix.xml
+++ b/app/src/main/res/layout/activity_login_netflix.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/netflix_logo_height"
         android:src="@drawable/ic_logo_netflix"
+        android:layout_margin="@dimen/margin_default"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/gl_vertical_4"/>
@@ -31,12 +32,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_default"
+        app:cardBackgroundColor="@color/gray_70"
+        app:cardCornerRadius="@dimen/corner_radius"
         app:layout_constraintBottom_toTopOf="@id/cv_password">
 
         <EditText
+            android:layout_margin="@dimen/margin_default"
             android:hint="@string/hint_email_or_phone_number"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:textColorHint="@android:color/darker_gray"
+            android:layout_height="wrap_content"
+            android:background="@null"/>
 
     </androidx.cardview.widget.CardView>
 
@@ -45,12 +51,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_default"
+        app:cardBackgroundColor="@color/gray_70"
+        app:cardCornerRadius="@dimen/corner_radius"
         app:layout_constraintBottom_toTopOf="@id/gl_center">
 
         <EditText
+            android:layout_margin="@dimen/margin_default"
             android:hint="@string/hint_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textColorHint="@android:color/darker_gray"
+            android:background="@null"/>
 
     </androidx.cardview.widget.CardView>
 
@@ -84,6 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="true"
+        android:buttonTint="@android:color/darker_gray"
         app:layout_constraintTop_toBottomOf="@id/btn_login"
         app:layout_constraintStart_toStartOf="@id/btn_login"/>
 
@@ -107,5 +119,54 @@
         app:layout_constraintTop_toTopOf="@id/txt_remember"
         app:layout_constraintBottom_toBottomOf="@id/txt_remember"
         />
+
+    <ImageView
+        android:id="@+id/iv_facebook"
+        android:visibility="gone"
+        android:layout_width="@dimen/facebook_icon_size"
+        android:layout_height="@dimen/facebook_icon_size"
+        android:src="@drawable/ic_facebook_icon"
+        android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginBottom="@dimen/margin_label_new_to_netflix_bottom"
+        app:layout_constraintBottom_toTopOf="@id/tv_new_netflix"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/txt_login_with_facebook"
+        android:textColor="@android:color/darker_gray"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginBottom="@dimen/margin_label_new_to_netflix_bottom"
+        android:drawableStart="@drawable/ic_facebook_icon"
+        android:drawablePadding="@dimen/margin_medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_new_netflix"/>
+
+    <TextView
+        android:id="@+id/tv_new_netflix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/font_size_new_to_netflix"
+        android:text="@string/txt_new_to_netflix"
+        android:textColor="@android:color/darker_gray"
+        android:textStyle="bold"
+        android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginBottom="@dimen/margin_label_new_to_netflix_bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/txt_signup_now"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="@dimen/font_size_new_to_netflix"
+        android:layout_marginStart="@dimen/margin_medium"
+        app:layout_constraintBottom_toBottomOf="@id/tv_new_netflix"
+        app:layout_constraintStart_toEndOf="@id/tv_new_netflix"
+        app:layout_constraintTop_toTopOf="@id/tv_new_netflix" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
