--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,8 @@
 
     <dimen name="netflix_logo_height">80dp</dimen>
     <dimen name="font_size_sign_in">24sp</dimen>
+    <dimen name="font_size_new_to_netflix">18sp</dimen>
+    <dimen name="margin_label_new_to_netflix_bottom">32dp</dimen>
+    <dimen name="margin_medium">8dp</dimen>
+    <dimen name="facebook_icon_size">24dp</dimen>
 </resources>
