--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black_50">#80000000</color>
 
     <color name="primary_fb">#3B5998</color>
     <color name="secondary_fb">#4B73C6</color>
     <color name="gray_70">#B3272727</color>
-
+    <color name="anahuac">#ff5a00</color>
 </resources>
